...
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="16dp"
...
                android:textColor="@color/toolbar_text_color"
                android:textSize="21sp"
                android:gravity="center"
                android:layout_marginRight="16dp"
                android:textStyle="bold" />
        <ImageView
                android:id="@+id/menuImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/more"/>
    </LinearLayout>

    <View
...
